--- a/package.json
+++ b/package.json
@@ -2,9 +2,7 @@
   "name": "ihaveadream",
   "version": "1.0.0",
   "devDependencies": {
-    "esbuild": "^0.14.49",
-    "open": "^8.4.0",
-    "typescript": "^4.7.4"
+    "esbuild": "^0.14.49"
   },
   "scripts": {
     "build": "node build.mjs",
@@ -15,7 +13,6 @@
   "main": "main.js",
   "license": "MIT",
   "dependencies": {
-    "deflate-js": "^0.2.3",
-    "l13": "^0.0.5"
+    "deflate-js": "^0.2.3"
   }
 }
